--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ documentation = "https://matthiasbeyer.github.io/filters/filters/index.html"
 repository = "https://github.com/matthiasbeyer/filters"
 
 [dependencies]
+
+[features]
+unstable-filter-as-fn=[]
