--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Matthias Beyer <mail@beyermatthias.de>",
 description = "Build filters/predicates with the builder pattern"
 keywords = ["iterator", "filter", "builder", "util"]
 readme        = "./README.md"
-license       = "LGPL-2.1"
+license       = "MPL-2.0"
 
 documentation = "https://matthiasbeyer.github.io/filters/filters/index.html"
 repository = "https://github.com/matthiasbeyer/filters"
