--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Matthias Beyer <mail@beyermatthias.de>",
 
 description   = "Build filters/predicates with the builder pattern"
 keywords      = ["iterator", "filter", "builder", "util"]
+categories    = ["rust-patterns"]
 readme        = "./README.md"
 license       = "MPL-2.0"
 
