--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,7 @@ keywords      = ["iterator", "filter", "builder", "util"]
 categories    = ["rust-patterns"]
 readme        = "./README.md"
 license       = "MPL-2.0"
-
-documentation = "https://matthiasbeyer.github.io/filters/filters/index.html"
-repository    = "https://github.com/matthiasbeyer/filters"
+repository    = "https://git.beyermatthi.as/filters"
 
 [dependencies]
 
