--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name    = "filters"
 version = "0.4.0"
+edition = "2021"
 authors = ["Matthias Beyer <mail@beyermatthias.de>",
            "Marcel Müller <neikos@neikos.email>" ]
 
@@ -10,6 +11,7 @@ categories    = ["rust-patterns"]
 readme        = "./README.md"
 license       = "MPL-2.0"
 repository    = "https://git.beyermatthi.as/filters"
+
 
 [dependencies]
 
