Set job name explicitely
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,6 +139,7 @@ jobs:
       - run: gitlint --commits $(git merge-base origin/master HEAD)..
 
   ci:
+    name: CI
     if: ${{ success() }}
     needs:
       - check
